# bones

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt
engine/headers/: algorithm.hpp  builtin_pipelines.hpp  builtin_shaders.hpp  engine.hpp  math.hpp  random.hpp  renderer.hpp  text_renderer.hpp
engine/libraries/jolt/: .gitignore
engine/libraries/physx/win64/checked/libs/: LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PVDRuntime_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.lib  PhysXCooking_64.lib  PhysXCooking_static_64.lib  PhysXFoundation_64.lib  PhysXFoundation_static_64.lib  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  PhysXVehicle2_static_64.lib  PhysX_64.lib  SceneQuery_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib
engine/src/: builtin_pipelines.cpp  engine.cpp
game/: CMakeLists.txt
game/src/: main.cpp
renderer/: CMakeLists.txt
renderer/headers/: renderer.hpp
src/: main.cpp
vs2022_clang_cmake_settings/: .gitignore  CMakeSettings.json
